Fix Lobby page - alignment and design

--- a/frontend-files/src/stylesheets/lobby/CreateSkateLobby.css
+++ b/frontend-files/src/stylesheets/lobby/CreateSkateLobby.css
@@ -1,5 +1,6 @@
 .create-skate-lobby {
     width: 100%;
+    height: calc(100vh - 70px);
     max-width: 550px;
     margin: auto;
     display: flex;
@@ -9,7 +10,6 @@
 }
 
 #lobby-settings {
-    height: 25%;
     margin-top: 20px;
     width: 95%;
     border-radius: 10px;
@@ -18,14 +18,15 @@
 }
 
 #lobby-settings-block {
-    position: absolute;
     background-color: #1c1c1c;
-    height: 95%;
+    /* height: 95%; */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     max-width: 550px;
+    /* animation: hideAnimation 0s ease-in 4s;
+    animation-fill-mode: forwards; */
 }
 
 @keyframes hideAnimation {
@@ -37,7 +38,10 @@
 }
 
 #lobby-settings-block p{
-    margin-top: 470px;
+    margin-bottom: 60px;
+    text-align: center;
+    
+    /* margin-top: 470px;
     z-index: 10;
     font-size: 20px;
     height: 75px;
@@ -48,14 +52,13 @@
     border: 1px solid #4e4e4e63;
     border-radius: 5px;
     word-wrap: break-word;
-    /* margin: 10px; */
     text-align: center;
     box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 50%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
     background: rgb(28, 28, 28, 90%);
     margin-bottom: 60px;
     text-align: center; 
     animation: hideAnimation 0s ease-in 4s;
-    animation-fill-mode: forwards;
+    animation-fill-mode: forwards; */
 }
 
 #visibility-switch {
